# include_proto_dir

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  release.yaml  rust-ci.yaml
proto/foo/v1/: foo.proto
src/: lib.rs
tests/: foo.rs
